// Copyright 2023 Innkeeper lanmengyou(殷家豪)&lt;2058818914@qq.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/lanyoumeng/myblog.git.

syntax = "proto3"; // 告诉编译器此文件使用什么版本的语法

package v1;

import "google/protobuf/timestamp.proto";

option go_package = "blog/pkg/proto/miniblog/v1";

// MyBlog 定义了一个 MyBlog RPC 服务.
service MyBlog {
  rpc ListUser(ListUserRequest) returns (ListUserResponse) {}
}

message UserInfo {
  string username = 1;
  string nickname = 2;
  string email = 3;
  string phone = 4;
  int64 postCount = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

// ListUserRequest 指定了 `ListUser` 接口的请求参数，相当于 HTTP Request 并对每个属性都定义数据类型.
// 需要为每个属性分配一个唯一编号，称为标记。此标记由 protobuf 用于表示属性，而不是使用属性名称.
// 因此，在 JSON 中我们每次都需要传递属性名称 name，而 protobuf 将使用数字 1 来表示 name.
message ListUserRequest {
  int64 limit = 1;
  int64 offset = 2;
}


// ListUserResponse 指定了 `GET /v1/users` 接口的返回参数，相当于 HTTP Response.
message ListUserResponse {
  int64 totalCount = 1;
  repeated UserInfo Users = 2;
}